# cloudflare-ddns

./: .env.example  Cargo.toml  readme.md
config/: config.toml
src/: main.rs
systemd/: cloudflare-ddns.service  cloudflare-ddns.timer
